# windows_virtual_environment

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  environment_config.json
.github/workflows/: x86-windows.yml
src/: print_environment.rs  print_registry.rs  start_environment.rs
